--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -23,8 +23,40 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+
+			.confrim {
+				width: 350px;
+				height: 320px;
+				background-color: white;
+				border-radius: 10px;
+				padding: 0px 10px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				flex-direction: column;
+				font-size: 22px;
+				text-align: center;
+				button {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					padding: 15px 30px;
+
+					background: #1ea7f3;
+					box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
+					border-radius: 12px;
+					font-style: normal;
+					font-weight: bold;
+					font-size: 19px;
+					line-height: 19px;
+					letter-spacing: 0.2px;
+					color: #ffffff;
+					cursor: pointer;
+					margin-top: 15px;
+				}
+			}
 			.form {
-				width: 320px;
+				width: 350px;
 				height: 320px;
 				background-color: white;
 				border-radius: 10px;
@@ -210,31 +242,87 @@
 				justify-content: space-between;
 				margin-top: 74px;
 				.code {
-					width: 70%;
-					max-width: 752px;
+					width: 750px;
+					text-align: left;
+					background-color: #473431;
+					border-radius: 0 0 5px 5px;
 					margin-right: 45px;
 					height: 450px;
-					background-color: black;
-					color: blueviolet;
+
+					color: #cc99cd;
 					padding: 30px;
 					font-size: 16px;
 					border-left: 10px solid #ddd;
 					position: relative;
+					word-wrap: break-word;
 					.props {
 						padding-left: 30px;
+						width: 100%;
+						color: #f8c555;
+						word-wrap: break-word;
+						.token {
+							color: #999;
+						}
+						.value {
+							color: #ccc;
+							word-break: break-all;
+							word-wrap: break-word;
+						}
 					}
 					.rightbracs {
 						padding-left: 20px;
 					}
-					pre {
-						color: blueviolet;
-						font-size: 16px;
+					.pre {
+						color: #cc99cd;
+						width: 750px;
+						word-break: break-all;
+						word-wrap: break-word;
+						animation: smoth 2s ease-in;
+
+						.props {
+							padding-left: 30px;
+							width: 100%;
+							color: #f8c555;
+							word-wrap: break-word;
+							.token {
+								color: #999;
+							}
+							.value {
+								color: #ccc;
+								word-break: break-all;
+								word-wrap: break-word;
+							}
+						}
+					}
+					.animation {
+						display: flex;
+						justify-content: center;
+						align-items: center;
+
+						width: 82px;
+						padding: 15px 20px;
+						background: rgba(0, 0, 0, 0.8);
+						box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
+						border-radius: 12px;
+						margin: 35px 0px;
+						font-style: normal;
+						font-weight: bold;
+						font-size: 19px;
+						line-height: 19px;
+						letter-spacing: 0.2px;
+						height: 50px;
+						position: absolute;
+						display: none;
+						z-index: 999;
+						animation: anime 1s ease;
+						bottom: 0;
+						right: 20;
 					}
 					.button {
 						display: flex;
 						justify-content: center;
 						align-items: center;
-						padding: 0px 60px;
+
 						max-width: 100px;
 						padding: 15px 20px;
 						background: #1ea7f3;
@@ -380,9 +468,23 @@
 					justify-content: center;
 					align-items: center;
 					margin-top: 20px;
-					.snipet {
+					.code {
+						width: 90vw;
 						margin-right: 0px;
 						margin-bottom: 56px;
+						padding: 5px;
+						font-size: 10px;
+						.pre {
+							width: 90vw;
+							max-width: 320px;
+							margin-right: 0px;
+							margin-bottom: 56px;
+							padding: 0;
+							font-size: 10px;
+							.props {
+								padding-left: 5px;
+							}
+						}
 					}
 				}
 				.footer {
@@ -397,5 +499,36 @@
 				}
 			}
 		}
+	}
+}
+@keyframes anime {
+	0% {
+		display: block;
+		opacity: 0;
+		bottom: 0px;
+		right: 120px;
+	}
+	1% {
+		opacity: 100%;
+		bottom: 0;
+		right: 120px;
+	}
+	98% {
+		bottom: 0px;
+		right: 18px;
+	}
+	100% {
+		display: none;
+	}
+}
+@keyframes smoth {
+	0% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 50%;
+	}
+	100% {
+		opacity: 100%;
 	}
 }
